--- a/documentation/source/_themes/m21/static/m21.css
+++ b/documentation/source/_themes/m21/static/m21.css
@@ -27,6 +27,10 @@ body {
     padding: 0 0 0 0;
 }
 
+.strike {
+  text-decoration: line-through;
+}
+
 pre, div[class*="highlight-"] {
     clear: left;
 }
